# quant-option-pricer

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  benchmark_performance.py  environment.yml  pyproject.toml  quant_option.py  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README_snippet.md  benchmarks.csv
data/: iv_demo.csv
examples/: quickstart.py
notebooks/: 00_quickstart.ipynb  QuantOptionDemo.ipynb
plots/: hedge_metrics.csv  iv_grid.csv
scripts/: benchmark_performance.py  calibrate_surface.py  run_hedge.py
src/quant/: __init__.py  hedging.py  iv.py  pricing.py
tests/: test_benchmark_smoke.py  test_data.csv  test_hedging.py  test_iv.py  test_pricing.py  test_quant_option.py  test_surface_smoke.py
